--- a/VipeBus.Core/App.config
+++ b/VipeBus.Core/App.config
@@ -3,8 +3,7 @@
 	<configSections>
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 		<connectionStrings>
-			<add name="DBConnection" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=userstore;Integrated Security=True;"
-				 providerName="System.Data.SqlClient"/>
+			<add name="DBConnection" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=userstore;Integrated Security=True;" providerName="System.Data.SqlClient"/>
 		</connectionStrings>
 	</configSections>
 	<entityFramework>
