--- a/VipeBus.Core/VipeBus.Core.csproj
+++ b/VipeBus.Core/VipeBus.Core.csproj
@@ -59,6 +59,10 @@
     <Compile Include="Migrations\202312021739469_AddModels.designer.cs">
       <DependentUpon>202312021739469_AddModels.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202312021849267_AddDriver.cs" />
+    <Compile Include="Migrations\202312021849267_AddDriver.designer.cs">
+      <DependentUpon>202312021849267_AddDriver.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VipeBusContext.cs" />
@@ -79,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202312021739469_AddModels.resx">
       <DependentUpon>202312021739469_AddModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202312021849267_AddDriver.resx">
+      <DependentUpon>202312021849267_AddDriver.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
