--- a/VipeBus/VipeBus.csproj
+++ b/VipeBus/VipeBus.csproj
@@ -83,8 +83,8 @@
     <Compile Include="CityWindow.xaml.cs">
       <DependentUpon>CityWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Driver.xaml.cs">
-      <DependentUpon>Driver.xaml</DependentUpon>
+    <Compile Include="DriverWindow.xaml.cs">
+      <DependentUpon>DriverWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="NewCity.xaml.cs">
       <DependentUpon>NewCity.xaml</DependentUpon>
@@ -105,7 +105,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Driver.xaml">
+    <Page Include="DriverWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
